# aeza-assistant

./: .envrc  .gitignore  Dockerfile  Dockerfile.torsocks  README.md  docker-compose.dev.yml  docker-compose.yml  file  flake.nix  module.nix  package.nix  pyproject.toml  result  setup.cfg  torsocks_start.sh
.github/workflows/: docker.yml  lint.yml  nix.yml
aeza_assistant/: __main__.py  aeza.py  alembic.ini  bot.py  constants.py  cron.py  database.py  db.py  middlewares.py  queue.py  state.py  texts.py  utils.py
aeza_assistant/callback_types/: subscribe.py
aeza_assistant/handlers/: __init__.py  added_to_group.py  admin.py  forum.py  router.py  start.py  status.py  subscribe_callbacks.py
aeza_assistant/keyboards/: subscribe.py
aeza_assistant/migrations/: env.py
aeza_assistant/migrations/versions/: 2024_10_01_1417-14818df7f851_add_chat_forum_thread_id.py
aeza_assistant/models/: abc.py  chat.py
migrations/versions/: 2023_02_23_1849-b02a40ae71f9_initial_revision.py  2024_04_26_2054-4b1c2bcb9ba9_add_is_admin_and_priority.py
