[tool.poetry]
name = "aeza-assistant"
version = "0.1.0"
description = "Aeza assistant bot"
authors = ["cofob <cofob@riseup.net>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "aeza_assistant"}]

[tool.poetry.scripts]
aeza-assistant = "aeza_assistant.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
aiohttp = "^3.9.4"
sqlalchemy = "^2"
asyncpg = "^0.29.0"
alembic = "^1.9.4"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
